# pymantra

./: .env.template  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.bib  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yaml  linting.yaml  run_tests.yaml
docs/: citation.rst  conf.py  contact.rst  index.rst  installation.rst  license.rst  references.bib  references.rst  requirements.txt  workflow.mmd
docs/api/: database.rst  index.rst  namemapping.rst  network.rst  plotting.rst
docs/examples/: confounder_correction.rst  custom_networks.rst  custom_reaction_model.rst  index.rst  metabolome_microbiome_enrichment.rst  name_mapping.rst  network.rst  plotting.rst  reaction_enrichment.rst
examples/: custom_network.py  estimation_with_correction.py  metabolite_enrichment.py  metabolite_microbiome_enrichment.py  name_mapping.py  network.py  plotting.py
experiments/: README.md  generenate_metabolome_microbiome_network.py  generenate_metabolome_network.py  mapping_utils.py  metabolite_preprocessing.py  microbiome_preprocessing.py  multiomics_downstream_analysis.py  pre_process_metabolome.py  pre_process_metabolome_microbiome.py  preprocessing_utils.py  run_experiments.sh  run_metabolome.py  run_metabolome_microbiome.py  utils.py  validation_cohort.py  visualisation_utils.py
namemapping_tests/: test_metaboanalyst_mapping.py  test_name_mapping.py  test_name_mapping_mantra.py  test_name_mapping_reactome.py
pymantra/: __init__.py  boost_available.cpp  boost_version.cpp  datasets.py  openmp_available.cpp  plotting.py  statics.py
pymantra/data/: example_graph.graphml  example_graph_query.py  metabolite_data.csv  sample_groups.csv
pymantra/database/: APINetworkGenerator.py  __init__.py  base.py  exceptions.py  query.py  utils.py
pymantra/namemapping/: __init__.py  metaboanalyst_mapping.py  name_mapping.py
pymantra/namemapping/databases/: sqlite_base.py
pymantra/namemapping/databases/ChEBI/: query.py  reduce_columns.py
pymantra/namemapping/databases/HMDB/: query.py  xml_processing.py
pymantra/namemapping/databases/Reactome/: query.py
pymantra/namemapping/databases/mantra_db/: query.py
pymantra/network/: __init__.py  enrichment_functions.py  exceptions.py  io_estimation.py  ld_estimation.py  non_parametric_multivariate.py  reaction_associations.py
pymantra/network/enrichment/: .clang-format  .clang-tidy  CMakeLists.txt  Exceptions.cpp  Exceptions.hpp  LocalSearch.py  doctest.h  pyutils.cpp  pyutils.hpp  spearman.pxd  spearman.pyx  statsutils.cpp  statsutils.hpp  utils.cpp  utils.hpp
pymantra/network/enrichment/LSO/: LocalSearch.cpp  LocalSearch.hpp  LocalSearch.tpp  local_dependence.hpp  lso.pxd  lso.pyx  lso_utils.cpp  lso_utils.hpp  objective_functions.cpp  objective_functions.hpp  reaction_graph.cpp  reaction_graph.hpp
pymantra/network/enrichment/tests/: case_residuals.csv  control_residuals.txt  spearmans_references.py  test_Exceptions.cpp  test_LocalSearch.cpp  test_ReferenceFree.cpp  test_ReferenceNetwork.cpp  test_objective_functions.cpp  test_reaction_graph.cpp  test_sorted_merging.cpp  test_stats.cpp  test_str_formatting.cpp
tests/: simulate_correlations.py  spearman_speedup.py  test_LocalSearch.py  test_api_query.py  test_correction.py  test_correlation_metrics.py  test_cython_extensions.py  test_database_query.py  test_datasets.py  test_ld_estimation.py  test_multiomics_enrichment.py  test_name_mapping_chebi.py  test_name_mapping_hmdb.py  test_plotting.py  test_spearman.py  test_utils.py
tests/test_data/: correlation_test_data.csv  correlations_pcor.csv  double_correction.csv  metaboanalyst_ids.csv  metabolites.csv  microbiome_data.csv  simulated_metabolite_correlations.csv  single_correction.csv  test_ids.tsv  test_metabolite_data.csv  test_metabolite_edges.json  test_metabolite_nodes.json  test_metabolites.csv  triple_correction.csv
