[options]
zip_safe = False
include_package_data = True
packages = find_namespace:


[options.packages.find]
include = pymantra*
exclude =
	docs
	database_tests
    examples
	experiments
    pymantra.network.enrichment.tests*
	simulation


[flake8]
exclude =
	build
	database_tests
	dist
	docs
	simulation
	# TODO: remove here once implemented
	pymantra/network/non_parametric_multivariate.py
